updated buttons with hover states updated normalize

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,6 @@ h1 {
  * 2. Show the overflow in Edge and IE.
  */
 hr {
-  -webkit-box-sizing: content-box;
   box-sizing: content-box;
   /* 1 */
   height: 0;
@@ -82,7 +81,6 @@ abbr[title] {
   /* 1 */
   text-decoration: underline;
   /* 2 */
-  -webkit-text-decoration: underline dotted;
   text-decoration: underline dotted;
   /* 2 */
 }
@@ -230,7 +228,6 @@ fieldset {
  *    `fieldset` elements in all browsers.
  */
 legend {
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   /* 1 */
   color: inherit;
@@ -265,7 +262,6 @@ textarea {
  */
 [type=checkbox],
 [type=radio] {
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   /* 1 */
   padding: 0;
@@ -344,7 +340,6 @@ template {
 * {
   font-family: "Lato", sans-serif;
   color: #777;
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -389,14 +384,8 @@ a {
 /* ============================================= */
 .nav {
   padding-left: 0;
-  -ms-flex-preferred-size: 100%;
   flex-basis: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
 }
 
@@ -406,7 +395,6 @@ a {
   padding: 10px 0;
   display: block;
   width: 100%;
-  -webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
   transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 }
 
@@ -423,19 +411,13 @@ a {
 }
 
 .row {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
   padding: 1em 10px;
 }
 
 [class^=col] {
   margin-top: 10px;
-  -ms-flex-preferred-size: 100%;
   flex-basis: 100%;
   min-height: 25px;
   padding: 10px;
@@ -491,7 +473,6 @@ a {
 }
 
 .card {
-  -ms-flex-preferred-size: 100%;
   flex-basis: 100%;
 }
 
@@ -499,7 +480,6 @@ a {
 /*              Forms                            */
 /* ============================================= */
 .form {
-  -ms-flex-preferred-size: 100%;
   flex-basis: 100%;
 }
 
@@ -537,21 +517,36 @@ a {
 .default {
   background-color: #51ddfc;
 }
+.default:hover {
+  background-color: #b5f1fe;
+}
 
 .error {
   background-color: #e4757a;
+}
+.error:hover {
+  background-color: #f5cacc;
 }
 
 .info {
   background-color: #927bc1;
 }
+.info:hover {
+  background-color: #cbc0e2;
+}
 
 .success {
   background-color: #63cc82;
 }
+.success:hover {
+  background-color: #b0e5c0;
+}
 
 .warning {
   background-color: #fd7856;
+}
+.warning:hover {
+  background-color: #fec9bb;
 }
 
 /* ============================================= */
@@ -600,22 +595,13 @@ a {
   }
 
   .row {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: row;
     flex-direction: row;
   }
 
   [class^=col] {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center;
     margin-top: 0;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
   }
 
@@ -624,80 +610,60 @@ a {
   }
 
   .col-1 {
-    -ms-flex-preferred-size: 8.33%;
     flex-basis: 8.33%;
   }
 
   .col-2 {
-    -ms-flex-preferred-size: 16.67%;
     flex-basis: 16.67%;
   }
 
   .col-3 {
-    -ms-flex-preferred-size: 25%;
     flex-basis: 25%;
   }
 
   .col-4 {
-    -ms-flex-preferred-size: 33.33%;
     flex-basis: 33.33%;
   }
 
   .col-5 {
-    -ms-flex-preferred-size: 41.67%;
     flex-basis: 41.67%;
   }
 
   .col-6 {
-    -ms-flex-preferred-size: 50%;
     flex-basis: 50%;
   }
 
   .col-7 {
-    -ms-flex-preferred-size: 58.33%;
     flex-basis: 58.33%;
   }
 
   .col-8 {
-    -ms-flex-preferred-size: 66.67%;
     flex-basis: 66.67%;
   }
 
   .col-9 {
-    -ms-flex-preferred-size: 75%;
     flex-basis: 75%;
   }
 
   .col-10 {
-    -ms-flex-preferred-size: 83.33%;
     flex-basis: 83.33%;
   }
 
   .col-11 {
-    -ms-flex-preferred-size: 91.67%;
     flex-basis: 91.67%;
   }
 
   .col-12 {
-    -ms-flex-preferred-size: 100%;
     flex-basis: 100%;
   }
 
   .nav {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: row;
     flex-direction: row;
-    -webkit-box-pack: end;
-    -ms-flex-pack: end;
     justify-content: flex-end;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
   }
 
   .nav-link {
-    -ms-flex-preferred-size: 100px;
     flex-basis: 100px;
   }
 
@@ -714,6 +680,5 @@ a {
     margin-right: initial;
   }
 }
-/*# sourceMappingURL=styles.css.map */
 
 /*# sourceMappingURL=styles.css.map */
