--- a/scss/styles.css
+++ b/scss/styles.css
@@ -537,21 +537,36 @@ a {
 .default {
   background-color: #51ddfc;
 }
+.default:hover {
+  background-color: #b5f1fe;
+}
 
 .error {
   background-color: #e4757a;
+}
+.error:hover {
+  background-color: #f5cacc;
 }
 
 .info {
   background-color: #927bc1;
 }
+.info:hover {
+  background-color: #cbc0e2;
+}
 
 .success {
   background-color: #63cc82;
 }
+.success:hover {
+  background-color: #b0e5c0;
+}
 
 .warning {
   background-color: #fd7856;
+}
+.warning:hover {
+  background-color: #fec9bb;
 }
 
 /* ============================================= */
