--- a/scss/component/_buttons.scss
+++ b/scss/component/_buttons.scss
@@ -5,7 +5,7 @@
 .btn {
     margin-top: 15px;
     width: 100%;
-    color: #fff;
+    color: $color-white;
     border: none;
     padding: 10px 0;
     text-transform: uppercase;
